Fixed alignment of hexagon & form

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,31 +182,43 @@ grid-template-areas:
     ------------------------------------------------------------ */
 #contact {
     max-width: 100vw;
+
 }
 #contact .header_svg {
     max-height: 45vh;
 }
 #form_left { grid-area: form_left; }
-#form_right { grid-area: form_right; justify-content: center; }
+#form_right { grid-area: form_right; }
 #send_contact_form { 
-    grid-area: send_contact_form; 
-    display: grid; 
-    justify-content: center; 
-} 
+    grid-area: send_contact_form;
+    display: grid;
+    justify-content: center;
+    } 
+
 
 #form_background {
-    background-image: url("/media/hexagon_pink.svg"); 
+    position: relative;
+    /*background-image: url("/media/hexagon_pink.svg"); 
     max-width: 80vw;
     background-position: center; 
     background-repeat: no-repeat; 
     position: relative;
     background-size: contain;
-    margin: auto;
-    
+    margin: auto;*/
  }
+
 #contact_form {
-    max-width: 50%;
-    min-height: 100vh;
+    max-width: 40vw;
+    position: absolute;
+    left: 30%;
+    top: 35%;
+}
+.hexagon_form {
+    max-width: 60vw;
+    display: block;
+    margin: auto;
+}
+.form_inputs {
     padding: 20px;
     margin: auto;
     display: grid;
@@ -215,8 +227,9 @@ grid-template-areas:
     'form_left form_right'
     'send_contact_form send_contact_form';
     grid-gap: 20px;
-    justify-content: space-between;
+    align-content: center;   
 }
+
 input[type=text], [type=email], [type=number], select, textarea {
     width: 100%;
     padding: 12px;
@@ -225,7 +238,7 @@ input[type=text], [type=email], [type=number], select, textarea {
     margin-bottom: 16px;
 }
 textarea {
-    min-height: 40%;
+    min-height: 50%;
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 input[type=submit] {
@@ -236,7 +249,7 @@ input[type=submit] {
     cursor: pointer;
     align-self: center;
 }
-    }
+    
 input[type=submit]:hover {
     background-color: rgb(190, 109, 127);
 }
